# xray

./: .otto.yml  Cargo.toml  README.md  xray.yml
docs/design/: 2026-03-08-xray.md  2026-03-21-xray-v0.2-improvements.md
skills/xray/: SKILL.md
src/: classify.rs  cli.rs  config.rs  detect.rs  main.rs  output.rs  skeleton.rs
src/outline/: mod.rs  python_parser.rs  rust_parser.rs  ts_parser.rs
