[package]
name = "xray"
version = "0.2.0"
edition = "2024"
authors = ["Scott Idler <scott.a.idler@gmail.com>"]
build = "build.rs"
description = "Context-aware codebase explorer for agentic LLMs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
eyre = "0.6"
ignore = "0.4"
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = "1.0.45"
rayon = "1.11.0"
rustpython-parser = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
syn = { version = "2.0.117", features = ["full", "visit"] }
tree-sitter = "0.26.6"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"

[build-dependencies]

[dev-dependencies]
tempfile = "3.26.0"
